--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.BootsFaces-OSP-1.1.3-dist-default.jar=C:\\Users\\javam\\Desktop\\Librerias\\BootsFaces-OSP-1.1.3-dist-default.jar
+file.reference.BootsFaces-OSP-1.1.3-dist-default.jar=C:\\Users\\javam\\Desktop\\WebApplication1-20171026T144401Z-001\\BootsFaces-OSP-1.1.3-dist-default.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
