--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_present=true
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,7 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.BootsFaces-OSP-1.1.3-dist-default.jar=C:\\Users\\javam\\Desktop\\Librerias\\BootsFaces-OSP-1.1.3-dist-default.jar
+file.reference.BootsFaces-OSP-1.1.3-dist-default.jar=C:\\Users\\javam\\Desktop\\Harvey Herrera\\Librerias\\BootsFaces-OSP-1.1.3-dist-default.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
