--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,8 +51,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.primefaces.classpath}:\
-    ${file.reference.BootsFaces-OSP-1.1.3-dist-default.jar-1}:\
-    ${libs.JasperLibray.classpath}
+    ${file.reference.BootsFaces-OSP-1.1.3-dist-default.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
